# openapi.json
@@ -396,10 +396,6 @@
      }
     },
     "type": "object",
-    "required": [
-     "title",
-     "html"
-    ],
     "title": "TemplateOnlyTitleOrHtml"
    },
    "TopMostRequest": {
